<resources>
    <string name="app_name">UberPets</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_main">UberPets</string>
    <string name="action_settings">Settings</string>
    <string name="conductor">Conductor</string>
    <string name="usuario">Usuario</string>
    <string name="title_activity_driver_home">UberPets</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="title_activity_travel">Map</string>
    <string name="title_activity_user_home">UberPets</string>
    <string name="new_travel_message">Te ha llegado un nuevo viaje</string>
    <string name="accept">Aceptar</string>
    <string name="reject">Rechazar</string>
    <string name="driver_follow_up_message">Su viaje esta en curso</string>
    <string name="estimated_arrival_time">Tiempo estimado de arribo</string>
    <string name="distance_to_destination">Distancia</string>
    <string name="end_travel">Finalizar</string>
    <string name="cancel">Cancelar</string>
    <string name="end_travel_message">Su viaje ha finalizado</string>
    <string name="driver_comment_hint">Ingrese un comentario para el cliente</string>
    <string name="user_comment_hint">Ingrese un comentario para el chofer</string>
    <string name="send">Enviar</string>
    <string name="pets_are_on_way">Tus mascotas están en camino</string>
    <string name="arrive_in">llegará a destino en</string>
    <string name="name_and_colon">Nombre:</string>
    <string name="name">Nombre</string>
    <string name="email">Email</string>
    <string name="phone">Teléfono</string>
    <string name="document_number">Dni</string>
    <string name="driver_on_the_way_message">El chofer está en camino</string>
    <string name="hardcode_space"> </string>
    <string name="searching_driver">Buscando chofer...</string>
    <string name="get_price">Cotizar viaje</string>
    <string name="select_pets_message">Seleccione las mascotas para el viaje</string>
    <string name="includes_passenger_checkbox">incluye acompañante</string>
    <string name="amount_with_colon">Importe: </string>
    <string name="content_description_little_pet">mascota pequeña</string>
    <string name="content_description_medium_pet">mascota mediana</string>
    <string name="content_description_big_pet">mascota grande</string>
    <string name="content_description_remove_pet">borrar mascota</string>
    <string name="recommend_better_service_checkbox">Recomiendo mejorar el servicio</string>
    <string name="error_quotation">Error al cotizar el viaje, inténtelo más tarde</string>
    <string name="continue_button">Continuar</string>
    <string name="button_out">Salir</string>
    <string name="yes_string">Si</string>
    <string name="no_string">No</string>
    <string name="facebook_app_id">1721301084683439</string>
    <string name="fb_login_protocol_scheme">fb1721301084683439</string>
    <string name="title_activity_tab_login">TabLoginActivity</string>
    <string name="tab_text_1">Soy Usuario</string>
    <string name="tab_text_2">Soy Conductor</string>
    <string name="welcome_message">Bienvenido</string>
    <string name="button_upload">Agregar</string>
    <string name="description_photo_profile">Imagen de foto de perfil de facebook</string>
    <string name="message_register_invalid">La cuenta no cumple con los estándares para la registración</string>
    <string name="message_welcome_register">Necesitamos que ingreses algunos datos para poder completar el registro</string>
    <string name="are_you_sure">¿Estás seguro?</string>
    <string name="cancel_travel_information">Al cancelar el viaje tendrás una calificación de 0 puntos.</string>

    <string name="your_travel_has_been_canceled_title">Su viaje ha sido cancelado</string>
    <string name="your_travel_has_been_canceled_body">Lamentamos informarle que el chofer a cancelado su viaje. El mismo será penalizado. Nuevamente le pedimos disculpas. Puede gestionar un nuevo viaje desde la pantalla de inicio.</string>

    <string name="logout_account">Cerrar sesión</string>
    <string name="number_phone">Teléfono celular</string>
    <string name="user_registry_data_instruction">Necesitamos que verifiques y completes algunos datos.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_profile_image_description">Imagen de perfil</string>
    <string name="registry">Registro</string>
    <string name="change_profile_picture">Cambiar foto</string>
    <string name="driver_photo_upload_instruction">Necesitamos que subas algunas fotos. Hace click en la imagen para subir o cambiar la foto.</string>
    <string name="sending_data_dots">Enviando datos…</string>
    <string name="user_scoring_description"><![CDATA[¿Cómo te ha ido con]]></string>
    <string name="closing_interrogation">"\?"</string>
    <string name="minutes">minutos</string>
    <string name="where_you_want_to_go">¿A dónde querés ir?</string>
    <string name="conection_problems_message">Se encontraron problemas en la conexión. inténtelo más tarde</string>
    <string name="driver_is_near">El chofer está cerca</string>
    <string name="account">Cuenta</string>
    <string name="car_register_message">Por favor ingresa los datos de tu auto.</string>
    <string name="car_plate">Patente</string>
    <string name="car_brand">Marca</string>
    <string name="car_model">Modelo</string>
    <string name="car_color">Color</string>
    <string name="channel_name">Channel_notification_travel</string>
    <string name="channel_description">channel_to_receive_travels</string>
    <string name="message_login_canceled">El login fue cancelado</string>
    <string name="message_login_error">Error en el Login</string>
    <string name="text_button_request_travel">Pedir Viaje</string>

</resources>
