<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.uberpets.mobile.DriverFollowUpTravel">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="@dimen/nav_header_vertical_spacing"
                android:layout_weight="@android:integer/config_longAnimTime"
                android:background="@color/colorPrimaryDark"
                android:fontFamily="sans-serif-smallcaps"
                android:text="@string/driver_follow_up_message"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                android:textColor="@color/lightText"
                android:typeface="normal" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/nav_header_vertical_spacing"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginBottom="@dimen/nav_header_vertical_spacing"
                android:background="@color/places_ui_default_primary"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="@dimen/nav_header_vertical_spacing"
                    android:layout_weight="@android:integer/config_longAnimTime"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView5"
                        style="?attr/textAppearanceListItem"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/distance_to_destination" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="@android:integer/config_longAnimTime"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView4"
                        style="?attr/textAppearanceListItem"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/estimated_arrival_time" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/nav_header_vertical_spacing"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button_cancel_travel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/colorAccent"
                    android:text="@string/cancel"
                    android:textColor="@color/lightText" />

                <Button
                    android:id="@+id/button_finalize_travel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/analogous1"
                    android:text="@string/end_travel"
                    android:textColor="@color/lightText" />
            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>
</FrameLayout>
